# area512

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  Rakefile  collect.md  partitions.csv  sdkconfig.defaults
components/area512/: CMakeLists.txt  area512.c  area512.h
components/area512/build_config/: area512.rb
components/area512/mrbgems/picoruby-area512-compile/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-compile/src/: area512_compile.c
components/area512/mrbgems/picoruby-area512-console/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-console/src/: area512_console.c
components/area512/mrbgems/picoruby-area512-edit/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-edit/src/: area512_edit.c  area512_markdown.c  area512_markdown.h
components/area512/mrbgems/picoruby-area512-edit/src/core/: editor.c  editor.h
components/area512/mrbgems/picoruby-area512-edit/src/core/buffer/: buffer.h  cursor.c  dirty.c  edit.c  lines.c  selection.c
components/area512/mrbgems/picoruby-area512-edit/src/core/complete/: complete_popup.c  complete_popup.h
components/area512/mrbgems/picoruby-area512-edit/src/core/markdown/: draw.c  draw.h  parse.c  parse.h  row_writer.c  row_writer.h  viewer.c  viewer.h
components/area512/mrbgems/picoruby-area512-edit/src/core/mode/: command.c  command.h  insert.c  insert.h  normal.c  normal.h  operator.c  operator.h  visual.c  visual.h
components/area512/mrbgems/picoruby-area512-edit/src/core/register/: paste.c  paste.h  repeat.c  repeat.h  search.c  search.h
components/area512/mrbgems/picoruby-area512-edit/src/core/render/: footer.c  footer.h  screen.c  screen.h
components/area512/mrbgems/picoruby-area512-edit/src/core/syntax/picoruby/: highlight.c  (+3 more)
components/area512/mrbgems/picoruby-area512-edit/src/core/text/: string.c  string.h  utf8.c  utf8.h
components/area512/mrbgems/picoruby-area512-edit/src/port/: area512_editor_canvas.c  area512_editor_canvas.h  area512_editor_file.c  area512_editor_file.h  area512_editor_host.c  area512_editor_host.h  area512_editor_paint.c  area512_editor_paint.h
components/area512/mrbgems/picoruby-area512-filer/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-filer/src/: area512_filer.c
components/area512/mrbgems/picoruby-area512-filer/src/core/: dialog.c  filer.h  input.c  interact.c  state.c  text.c  ui_lifecycle.c
components/area512/mrbgems/picoruby-area512-filer/src/core/draw/: bar.c  draw.c  draw.h  frame.c  list.c  panel.c
components/area512/mrbgems/picoruby-area512-sandbox/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-sandbox/mrblib/: sandbox.rb
components/area512/mrbgems/picoruby-area512-sandbox/src/: area512_sandbox.c
components/area512/mrbgems/picoruby-area512-sdfat/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-sdfat/mrblib/: area512_fs.rb  sdfat.rb
components/area512/mrbgems/picoruby-area512-sdfat/src/: area512_fs.c  area512_sdfat.c
components/area512/mrbgems/picoruby-area512-sprite/: mrbgem.rake
components/area512/mrbgems/picoruby-area512-sprite/src/: area512_sprite.c
components/area512/mrbgems/picoruby-area512-ti/: README.md  mrbgem.rake
components/area512/mrbgems/picoruby-area512-ti/host_test/: Makefile  test_builtin  test_builtin.c  test_eval  test_eval.c  test_suggest  test_suggest.c
components/area512/mrbgems/picoruby-area512-ti/src/: area512_ti.c
components/area512/mrbgems/picoruby-area512-ti/src/base/: area512_ti_arena.c  area512_ti_arena.h  area512_ti_define_info.c  area512_ti_define_info.h  area512_ti_t.c  area512_ti_t.h  area512_ti_t_frame.c  area512_ti_t_frame.h  area512_ti_type.c  area512_ti_type.h
components/area512/mrbgems/picoruby-area512-ti/src/builtin/: area512_ti_builtin.c  area512_ti_builtin.h
components/area512/mrbgems/picoruby-area512-ti/src/context/: area512_ti_context.c  area512_ti_context.h
components/area512/mrbgems/picoruby-area512-ti/src/core/: area512_ti_builtin.h  area512_ti_context.h  area512_ti_define_info.c  area512_ti_define_info.h  area512_ti_eval.c  area512_ti_eval_expression.c  area512_ti_eval_expression.h  area512_ti_suggest.c  area512_ti_t.h  area512_ti_t_frame.c  area512_ti_t_frame.h
components/area512/mrbgems/picoruby-area512-ti/src/eval/: area512_ti_bind.c  area512_ti_bind.h  area512_ti_class.c  area512_ti_class.h  area512_ti_def.c  area512_ti_def.h  area512_ti_eval.c  area512_ti_eval.h  area512_ti_eval_expression.c  area512_ti_eval_handlers.c  area512_ti_eval_handlers.h  area512_ti_ifunless.c  area512_ti_ifunless.h  area512_ti_return.c  area512_ti_return.h  area512_ti_square_bracket.c  area512_ti_square_bracket.h
components/area512/mrbgems/picoruby-area512-ti/src/eval/method_evaluator/: area512_ti_method_evaluator.c  area512_ti_method_evaluator.h
components/area512/mrbgems/picoruby-area512-ti/src/hover/: area512_ti_hover.c  area512_ti_hover.h
components/area512/mrbgems/picoruby-area512-ti/src/suggest/: area512_ti_suggest.c  area512_ti_suggest.h
components/area512/mrbgems/picoruby-area512-widget/: README.md  mrbgem.rake
components/area512/mrbgems/picoruby-area512-widget/src/: area512_widget.c
components/area512/mrbgems/picoruby-area512-widget/src/core/: key.c  list.c  metrics.c  modal.c  text_view.c  widget.h
components/area512/mrbgems/picoruby-area512-widget/src/core/draw/: bar.c  chart.c  control.c  indicator.c  panel.c  table.c  text.c
components/area512/mrbgems/stubs/picoruby-littlefs/: mrbgem.rake
components/area512/mrbgems/stubs/picoruby-vfs/: mrbgem.rake
components/area512/mrblib/: main_task.rb
components/area512/ports/: littlefs_flash_hal.c  machine_port.c
components/area512_hal/: CMakeLists.txt
components/area512_hal/console/: console.h  console_internal.h  getch.cpp  input.cpp  keyboard.cpp  output.c  splash.h  system_metrics.cpp  system_metrics.h  vm_stats.c
components/area512_hal/gfx/: area512_display.cpp  area512_display.h  area512_gfx.cpp
components/area512_hal/include/: area512_hal.h
components/area512_hal/sd/: area512_data_path.c  area512_sd.c  area512_seed.c
(+156 files in other folders)
